--- a/index.html
+++ b/index.html
@@ -10,42 +10,38 @@
     <link rel="stylesheet" href="./main.css">
 </head>
 <body>
-  <div class="conteiner">
+  <div class="container">
     <header>
         <img src="./logo.png" alt="capelo e diploma">
         <h1>Calculadora de médias</h1>
     </header>
-    <form>
-        <input type="text" required placeholder="nome da atividade" />
-        <input type="number" required placeholder="nota da atividade" min="0"  max="10" />
+    <form id="form-atividade">
+        <input type="text"  id="nome-atividade"  required placeholder="nome da atividade" />
+        <input type="number" id="nota-atividade" required placeholder="nota da atividade" min="0"  max="10" />
         <button type="submit">Adicionar +</button>
     </form>
-    <table>
+    <table cellspacing="0">
         <thead>
-            <tr>
-                <th>
-                    Nome da atividade
-                </th>
-                <th>Nota da atividade</th>
-                <th>Aprovado?</th>
-            </tr>
+      <tr>
+        <th>
+            Nome da atividade
+        </th>
+        <th>Nota da atividade</th>
+        <th>Aprovado?</th>
+      </tr>
         </thead>
         <tbody>
-            <tr>
-                <td>atividade 1</td>
-                <td>7</td>
-                <td><img src="./aprovado.png" alt="Emoji festejando"/></td>
-            </tr>
         </tbody>
         <tfoot>
             <tr>
                 <td>Média final </td>
-                <td>7</td>
-                    <td>Aprovado</td>
+                <td id="media-final-valor">---</td>
+                    <td id="media-final-resultado">---</td>
                 
             </tr>
         </tfoot>
     </table>
   </div>
+  <script src="./main.js"></script>
 </body>
 </html>
